将gradle相关内容转移 添加lombok依赖